[package]
edition = "2024"
name = "blinky"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.7.0", features = ["nrf5340-app-s", "time-driver-rtc1", "gpiote", "unstable-pac"] }
embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embedded-io-async = { version = "0.6.1" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

static_cell = "2"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embedded-storage = "0.3.1"
usbd-hid = "0.8.1"
serde = { version = "1.0.136", default-features = false }
ssd1306 = { version = "0.10.0", features = ["graphics"] }
nmea = { version = "0.7.0", default-features = false, features = ["GGA", "ZDA", "defmt-03"]}
heapless = "0.9.1"
libm = "0.2.15"
chrono = { version = "0.4.41", default-features = false }
embedded-graphics = "0.8.1"

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/nrf5340" }
]
