[package]
name = "hijo"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.4"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.9.0", features = [ "defmt", "nrf5340-app-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

nmea = { version = "0.7.0", default-features = false, features = ["GGA", "GLL"]}
ssd1306 = { version = "0.10.0", features = ["graphics"] }
embedded-graphics = "0.8.2"
heapless = "0.9.2"
static_cell = "2.1.1"
libm = "0.2.16"
chrono = { version = "0.4.43", default-features = false }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"