[package]

name = "hijo"
version = "0.1.0"
authors = ["Logan Michaels"]
edition = "2024"

[[bin]]
name = "hijo"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embassy-futures = { version = "0.1.2"  }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread" ] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.11.0", features = ["defmt", "nrf5340-app-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
nmea = { version = "0.7.0", default-features = false, features = ["GGA"]}
ssd1306 = { version = "0.10.0", features = ["graphics"] }
embedded-graphics = "0.8.2"
heapless = "0.9.3"
static_cell = "2.1.1"
libm = "0.2.16"
chrono = { version = "0.4.45", default-features = false }
defmt = "1.1.1"
defmt-rtt = "1.3.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }


[profile.release]
debug = 2
target = "thumbv8m.main-none-eabihf"

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/nrf5340" }
]
